--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
     "@testing-library/user-event": "^13.5.0",
     "bcrypt": "^5.0.1",
     "express": "^4.17.2",
+    "google-maps-react": "^2.0.6",
     "lodash": "^4.17.21",
     "pg": "^8.7.3",
     "react": "^17.0.2",
